fix align of contact image with the site logo

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -105,7 +105,7 @@ main {
   #left-img {
     background-image: url(../images/space.jpg);
     background-size: cover;
-    flex: 0 5 1000px;
+    flex: min-content;
   }
 
   .no-nav {
